tests/parsing/smtlib/poly/errors/037_match_case_list_unopened_1.psmt2
(set-logic ALL)
(declare-datatypes ((t 0)) (((A) (B) (C) (D))))
(define-fun f ((x t)) t (match x _))
(check-sat)
