tests/parsing/smtlib/poly/errors/037_match_case_list_unopened_1.expected
File "tests/parsing/smtlib/poly/errors/037_match_case_list_unopened_1.psmt2", line 3, character 33-34:
3 | (define-fun f ((x t)) t (match x _))
                                     ^
Error while parsing a match, read the reserved word '_',
      but expected a match case list, starting with an opening parenthesis.
